--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -1,5 +1,5 @@
 /* temporary overflow fix, potential issue if we wanted a div with a scroll bar*/
 div{
-    overflow-x: hidden;
-    overflow-y:hidden;
+    
 }
+    
